Corrigi a data de início da faculdade, coloquei a reprogama primeiro dos outros cursos e mudei a palavra prototipação para prototipagem

--- a/students/julia_maschion/julia_maschion.html
+++ b/students/julia_maschion/julia_maschion.html
@@ -115,14 +115,6 @@
             </div>
             <h2 class="background-DEBBDD">O que já estudei</h2>
             <div class="study">
-                <h3>{ FATEC - Gestão Empresarial }</h3>
-                <h5>Ago 2015 até Ago 2017</h5>
-                <p> O curso teve ênfase nas bases da administração. Durante a graduação aprendi a ser autodidata
-                    e por ser um curso amplo, aprendi assuntos diversos como: contabilidade, direito, economia,
-                    marketing,
-                    sistemas de informação, gestão ambiental, entre outros. </p>
-            </div>
-            <div class="study">
                 <h3>{ Reprograma }</h3>
                 <h5> Ago - 2018 até Dez 2018 - 688h</h5>
                 <p> O curso de desenvolvimento front-end intensivo proporcionou uma das melhores experiências que já
@@ -131,9 +123,17 @@
                     ajudamos quem
                     precisava e melhoramos nossa confiança. Desenvolvi projetos para clientes reais e me sinto cada vez
                     mais motivada a aprender assuntos novos. Além de desenvolvimento front-end, aprendemos ferramentas
-                    de prototipação e design de interface como
+                    de prototipagem e design de interface como
                     Marvel e Figma.
                 </p>
+            </div>
+            <div class="study">
+                <h3>{ FATEC - Gestão Empresarial }</h3>
+                <h5>Ago 2014 até Ago 2017</h5>
+                <p> O curso teve ênfase nas bases da administração. Durante a graduação aprendi a ser autodidata
+                    e por ser um curso amplo, aprendi assuntos diversos como: contabilidade, direito, economia,
+                    marketing,
+                    sistemas de informação, gestão ambiental, entre outros. </p>
             </div>
             <div class="study">
                 <h3>{ SENAI - Técnico em Vestuário }</h3>
